# CUE4Parse-Python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/cue4parse/: __init__.py  __main__.py  cli.py  core.py  example.py  includes.py  setup.bat  setup.sh  setup_deps.py
